--- a/invenio_collections/templates/invenio_collections/base.html
+++ b/invenio_collections/templates/invenio_collections/base.html
@@ -1,4 +1,4 @@
-# -*- coding: utf-8 -*-
+{# -*- coding: utf-8 -*-
 #
 # This file is part of Invenio.
 # Copyright (C) 2015 CERN.
@@ -21,9 +21,13 @@
 # In applying this license, CERN does not
 # waive the privileges and immunities granted to it by virtue of its status
 # as an Intergovernmental Organization or submit itself to any jurisdiction.
-
-[tox]
-envlist = py27
-
-[testenv]
-commands = {envpython} setup.py test
+#}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    {%- block page_body %}{%- endblock page_body %}
+  </body>
+</html>
