--- a/invenio_collections/templates/invenio_collections/index.html
+++ b/invenio_collections/templates/invenio_collections/index.html
@@ -1,4 +1,4 @@
-# -*- coding: utf-8 -*-
+{# -*- coding: utf-8 -*-
 #
 # This file is part of Invenio.
 # Copyright (C) 2015 CERN.
@@ -20,14 +20,11 @@
 #
 # In applying this license, CERN does not
 # waive the privileges and immunities granted to it by virtue of its status
-# as an Intergovernmental Organization or submit itself to any jurisdiction.
+# a an Intergovernmental Organization or submit itself to any jurisdiction.
+#}
 
-"""Invenio module for organizing metadata into collections."""
+{%- extends config.COLLECTIONS_BASE_TEMPLATE -%}
 
-from __future__ import absolute_import, print_function
-
-from .ext import InvenioCollections
-from .receivers import get_record_collections
-from .version import __version__
-
-__all__ = ('__version__', 'InvenioCollections', 'get_record_collections')
+{%- block page_body %}
+<h2>{{ collection.name }}</h2>
+{%- endblock %}
